[package]
name = "kron"
version = "2.0.0"
edition = "2021"
repository = "https://github.com/qtfkwk/kron-rs"
license = "MIT"
description = "Date/time CLI utility"

[dependencies]
clap = { version = "4.3.0", features = ["derive", "wrap_help"] }
kron-lib = { version = "2.0.0", path = "../lib" }

[dev-dependencies]
assert_cmd = "2.0.11"
