[package]
name = "kron"
version = "2.1.0"
edition = "2021"
repository = "https://github.com/qtfkwk/kron-rs"
license = "MIT"
description = "Date/time CLI utility"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive", "wrap_help"] }
kron-lib = { version = "2.1.0", path = "../lib" }
pager = "0.16.1"

[dev-dependencies]
assert_cmd = "2.0.11"
